@@ -13,17 +13,30 @@ This project provides a real-time data pipeline for monitoring and analyzing **L
 
 ### 🛠️ Stream Processing (Apache Flink)
 
-* **`StreamingEventsToClickHouse.scala`**: The core Scala application that consumes raw JSON from Kafka, parses it, and routes it to specific ClickHouse tables.
-* **`build.sbt` & `build.properties**`: Configuration files for the Scala Build Tool (SBT) used to compile the Flink job.
-* **`plugins.sbt`**: Adds the `sbt-assembly` plugin to create "fat" JARs for Flink deployment.
-* **`submit-jobs.sh`**: A shell script that automates the submission of the compiled JAR to the Flink JobManager.
+* **`flink-jobs/src/main/java/com/livepeer/analytics/pipeline/StreamingEventsToClickHouse.java`**: The core Java application that enforces quality gates (schema validation + dedup), parses events, and routes them to ClickHouse tables.
+* **`flink-jobs/src/main/java/com/livepeer/analytics/pipeline/DlqReplayJob.java`**: Replay job that re-ingests DLQ payloads into Kafka with replay metadata.
+* **`pom.xml`**: Maven build for the Flink job(s), producing the fat JAR.
+* **`submit-jobs.sh`**: Submits the main ingestion job to the Flink JobManager.
+* **`submit-replay-job.sh`**: Submits the DLQ replay job on demand.
+
+### 🧭 Source Layout
+
+Packages under `flink-jobs/src/main/java/com/livepeer/analytics` are organized by responsibility:
+
+* `pipeline`: Flink entrypoints and Kafka source wiring.
+* `quality`: Schema validation, deduplication, and DLQ envelope construction.
+* `parse`: Typed event parsing helpers.
+* `sink`: ClickHouse row mapping, sink factory, and sink guards.
+* `model`: POJOs for events, envelopes, and payloads.
+* `util`: Shared JSON and hashing utilities.
 
 ### 📊 Storage & Visualization
 
 * **`01-schema.sql`**: SQL initialization script that defines the ClickHouse database schema and materialized views for metrics like FPS and ingest quality.
 * **`default-user.xml`**: Configures the `analytics_user` with necessary permissions in ClickHouse.
-* **`clickhouse.yml` & `dashboard.yml**`: Grafana provisioning files to automatically configure the ClickHouse datasource and dashboard folders.
+* **`clickhouse.yml` & `dashboard.yml`**: Grafana provisioning files to automatically configure the ClickHouse datasource and dashboard folders.
 * **`naap-overview.json`**: A pre-configured Grafana dashboard for real-time NaaP performance monitoring.
+* **`quality-gate.json`**: Grafana dashboard for DLQ/quarantine volume and top failure classes.
 
 ### 📡 Gateway & Ingest
 
@@ -45,8 +58,7 @@ Ensure the following directories exist in your project root:
 mkdir -p data/kafka
 
 # Create Flink checkpoint and savepoint directories
-mkdir -p data/flink/tmp/checkpoints
-mkdir -p data/flink/tmp/savepoints
+mkdir -p data/flink/tmp/
 
 # Ensure other data directories exist
 mkdir -p data/gateway
@@ -87,19 +99,68 @@ docker compose up
 
 This will automatically build the Flink job, initialize the ClickHouse schema, and start all monitoring services.
 
+## ✅ Quality Gate & Replay
+
+The Flink job enforces a quality gate before writing to ClickHouse:
+
+- Schema validation and deterministic failure classification
+- Deduplication with TTL (duplicates go to quarantine)
+- DLQ envelopes with source pointers and payloads for replay
+- Network capability + discovery events emit multiple rows per event when arrays are present
+
+Replay runbook: `documentation/REPLAY_RUNBOOK.md`
+Alert guidance: `documentation/QUALITY_ALERTS.md`
+
+### ClickHouse Sink (Flink Connector)
+
+The job uses ClickHouse's `flink-connector-clickhouse` AsyncSink for table writes. Key settings:
+
+- `CLICKHOUSE_URL` (default `http://clickhouse:8123`)
+- `CLICKHOUSE_DATABASE` (default `livepeer_analytics`)
+- `CLICKHOUSE_USER`
+- `CLICKHOUSE_PASSWORD`
+- `CLICKHOUSE_SINK_MAX_BATCH_SIZE`
+- `CLICKHOUSE_SINK_MAX_IN_FLIGHT`
+- `CLICKHOUSE_SINK_MAX_BUFFERED`
+- `CLICKHOUSE_SINK_MAX_BATCH_BYTES`
+- `CLICKHOUSE_SINK_MAX_TIME_MS`
+- `CLICKHOUSE_SINK_MAX_RECORD_BYTES`
+The sink uses `JSONEachRow` format to avoid CSV escaping issues with large JSON payloads.
+`CLICKHOUSE_SINK_MAX_RECORD_BYTES` is also enforced by a pre-sink guard that routes oversized rows to the DLQ (DLQ/quarantine rows are dropped if oversized to avoid recursion).
+
+### Schema Sync (Mapper Safety)
+
+We keep ClickHouse JSON row mappers in code, so we enforce a schema sync test to prevent drift.
+The test parses `configs/clickhouse-init/01-schema.sql` and asserts that every JSON row emitted by
+`ClickHouseRowMappers` matches the table columns (excluding materialized/default columns).
+
+When the ClickHouse schema or inbound JSON changes, update these files in this order:
+
+1. `configs/clickhouse-init/01-schema.sql` (table definition changes)
+2. `flink-jobs/src/main/java/com/livepeer/analytics/parse/EventParsers.java` (new/changed fields)
+3. `flink-jobs/src/main/java/com/livepeer/analytics/model/EventPayloads.java` (payload shapes)
+4. `flink-jobs/src/main/java/com/livepeer/analytics/sink/ClickHouseRowMappers.java` (column mapping)
+5. Update tests/fixtures as needed: `flink-jobs/src/test/java/com/livepeer/analytics/sink/ClickHouseSchemaSyncTest.java`, `flink-jobs/src/test/java/com/livepeer/analytics/parse/EventParsersTest.java`
+
 ## 🔗 Service Endpoints
 
 Once running, the following interfaces are available:
 
 *Note: Since the Stream Test UI has a requirement for HTTPS, ideally run the webserver behind a cloudflare tunnel for proper HTTPS support*
 
-* **Stream Test UI**: [http://localhost:8088/](https://www.google.com/search?q=http://localhost:8088/)
-* **Grafana Dashboards**: [http://localhost:3000/](https://www.google.com/search?q=http://localhost:3000/) (Default: `admin/admin`)
-* **ClickHouse UI**: [http://localhost:8123/dashboard](https://www.google.com/search?q=http://localhost:8123/dashboard) (User: `analytics_user` / Pass: `analytics_password`)
-* **Flink Manager**: [http://localhost:8081/](https://www.google.com/search?q=http://localhost:8081/)
-* **Kafka UI (Kafbat)**: [http://localhost:8080/ui](https://www.google.com/search?q=http://localhost:8080/ui)
+* **Stream Test UI**: http://localhost:8088/
+* **Grafana Dashboards**: http://localhost:3000/ (Default: `admin/admin`)
+* **ClickHouse UI**: http://localhost:8123/dashboard (User: `analytics_user` / Pass: `analytics_password`)
+* **Flink Manager**: http://localhost:8081/
+* **Kafka UI (Kafbat)**: http://localhost:8080/ui
 
 ---
+
+## 📌 Kafka Topics (Quality Gate)
+
+- `streaming_events` (input)
+- `events.dlq.streaming_events.v1` (DLQ)
+- `events.quarantine.streaming_events.v1` (duplicates / expected rejects)
 
 ## 🛠️ Troubleshooting & Permissions
 
@@ -127,6 +188,14 @@ ls -la data/flink/tmp
 You should see `drwxrwxrwx` for both `checkpoints` and `savepoints`.
 
 ---
+### Java 17 Module Access (Flink Tests)
+
+If tests fail with `InaccessibleObjectException` related to `java.util.Arrays$ArrayList`, we enable:
+`--add-opens java.base/java.util=ALL-UNNAMED` in `flink-jobs/pom.xml`. This is required by Flink's
+Kryo/Chill serializers on Java 17+ to access JDK internals during serialization. Keep this flag in
+test JVMs (and in production JVMs if you see the same error).
+
+---
 
 ### Updated "Run the Project" Sequence
 
@@ -139,12 +208,11 @@ For a smooth first-time setup, the recommended command sequence is:
 ---
 
 ## 🛠️ Build Tester UI (optional)
-`DockerFile.webapp` is used by requires the checking out of Brad's live-video-to-video app
+`Dockerfile.webapp` requires checking out Brad's live-video-to-video app:
 
 ```
 git clone https://github.com/ad-astra-video/livepeer-app-pipelines.git
 cd livepeer-app-pipelines/livep-video-to-video
 git checkout 6e83149a09c74d316948d142758fa3dad7c8fc39
-ocker build -t tztcloud/livepeer-rtav-test-ui:latest -f Dockerfile.webapp .
+docker build -t tztcloud/livepeer-rtav-test-ui:latest -f Dockerfile.webapp .
 ```
-
